modified:   JSON Objects.ipynb

--- a/JSON Objects.ipynb
+++ b/JSON Objects.ipynb
@@ -5,8 +5,7 @@
    "id": "1ea65df5",
    "metadata": {},
    "source": [
-    "# JSON\n",
-    "This is a new empty SQL notebook. Add your SQL code cells below."
+    "# JSON\n"
    ]
   },
   {
